added stop button

--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,15 @@
+header {
+  justify-items: center;
+  display: grid;
+  align-items: center;
+  min-height: 15vh;
+  grid-template-columns: 1fr 1fr;
+}
 
+#pageMain {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+}
 
+/*# sourceMappingURL=style.css.map */
