--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,87 @@ header {
   min-height: 15vh;
   grid-template-columns: 1fr 1fr;
 }
+header > .logo {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  text-align: center;
+  width: 100%;
+}
+header > .creds {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  text-align: center;
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
+
+footer {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr;
+  min-height: 20vh;
+  text-align: center;
+}
+footer > .createdBy {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  text-align: center;
+  font-size: 0.85em;
+  width: 70%;
+}
+footer > .credentials {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  text-align: center;
+  width: 70%;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
+
+* {
+  margin: 0px;
+  padding: 0px;
+}
 
 #pageMain {
   display: grid;
   align-items: center;
   justify-items: center;
+  min-height: 80vh;
+}
+#pageMain > section {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  width: 100%;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+#pageMain > section > #scalesWrapper {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  width: 100%;
+}
+#pageMain > section > #controlsWrapper {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  width: 100%;
+}
+#pageMain > section > #controlsWrapper > #playButton {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+}
+#pageMain > section > #controlsWrapper > #playButton > span {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr;
 }
 
 /*# sourceMappingURL=style.css.map */
