--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,30 @@ footer > .credentials {
   align-items: center;
   justify-items: center;
   width: 100%;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-auto-flow: row;
+  row-gap: 50px;
+}
+#pageMain > section > #notesWrapper {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  width: 100%;
+}
+#pageMain > section > #notesWrapper > #notesDisplay {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  width: 100%;
+}
+#pageMain > section > #notesWrapper > #notesDisplay > span {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  text-align: center;
+  grid-template-rows: 1fr 1fr;
+}
+#pageMain > section > #notesWrapper > #notesDisplay > span > #sequence_display {
+  width: 80%;
 }
 #pageMain > section > #scalesWrapper {
   display: grid;
