--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,7 +19,38 @@ body{
         align-items: center;
         justify-items: center;
         width: 100%;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-auto-flow: row;
+        row-gap: 50px;
+
+        >#notesWrapper{
+            display: grid;
+            align-items: center;
+            justify-items: center;
+            width: 100%;
+
+            >#notesDisplay{
+                display: grid;
+                align-items: center;
+                justify-items: center;
+                width: 100%;
+
+                >span{
+                    display: grid;
+                    align-items: center;
+                    justify-items: center;
+                    text-align: center;
+                    grid-template-rows: 1fr 1fr;
+                    
+                    >#sequence_display{
+                    width: 80%;
+                    }
+                    >#note_display{
+
+
+                    }
+                }
+            }
+        }
 
         >#scalesWrapper{
             display: grid;
@@ -43,7 +74,8 @@ body{
                     align-items: center;
                     justify-items: center;
                     grid-template-columns: 1fr 1fr;
-                    >button{
+
+                    >h3{
 
                     }
                 }
