--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,10 @@ footer > .credentials {
   padding: 0px;
 }
 
+body {
+  background-color: #212529;
+}
+
 #pageMain {
   display: grid;
   align-items: center;
@@ -83,15 +87,30 @@ footer > .credentials {
   justify-items: center;
   text-align: center;
   grid-template-rows: 1fr 1fr;
+  width: 50%;
 }
 #pageMain > section > #notesWrapper > #notesDisplay > span > #sequence_display {
-  width: 80%;
+  width: 50%;
+  color: #f8f9fa;
+  background-color: #343a40;
+  padding: 5px;
+  border-radius: 5px;
+}
+#pageMain > section > #notesWrapper > #notesDisplay > span > #note_display {
+  font-size: 1.5em;
+  color: #f8f9fa;
+  background-color: #343a40;
+  padding: 5px;
+  border-radius: 5px;
 }
 #pageMain > section > #scalesWrapper {
   display: grid;
   align-items: center;
   justify-items: center;
   width: 100%;
+}
+#pageMain > section > #scalesWrapper > #scale_choice > span > div > h3 {
+  color: #f8f9fa;
 }
 #pageMain > section > #controlsWrapper {
   display: grid;
@@ -103,12 +122,25 @@ footer > .credentials {
   display: grid;
   align-items: center;
   justify-items: center;
+  width: 100%;
 }
 #pageMain > section > #controlsWrapper > #playButton > span {
   display: grid;
   align-items: center;
   justify-items: center;
   grid-template-columns: 1fr 1fr;
+  width: 90%;
+}
+#pageMain > section > #controlsWrapper > #playButton > span > h3 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  text-align: center;
+  color: #f8f9fa;
+  background-color: #343a40;
+  padding: 5px;
+  border-radius: 5px;
+  width: 75px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
