--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -11,15 +11,31 @@ footer{
         justify-items: center;
         text-align: center;
         font-size: 0.85em;
-        width: 70%;
+        width: 80%;
+        >h2{
+            color:#f8f9fa ;
+            font-size: 1.5em;
+            background-color:#343a40;
+            padding: 5px;
+            border-radius: 5px;
+            margin: 5px;
+
+        }
     }
     >.credentials{
         display: grid;
         align-items: center;
         justify-items: center;
         text-align: center;
-        width: 70%;
-        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-
+        width: 90%;
+        grid-template-columns: repeat(auto-fit, minmax(75px, 1fr));
+        >a{
+            margin: 5px;
+            color: #212529;
+            text-decoration: none;
+            padding: 5px;
+            border-radius: 5px;
+            background-color:#c77dff;
+        }
     }
 }
