--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,18 +2,24 @@ header{
     justify-items: center;
     display: grid;
     align-items: center;
-    min-height: 15vh;
+    min-height: 10vh;
     grid-template-columns: 1fr 1fr;
+    background-color:#212529;
 
     >.logo{
         display: grid;
         align-items: center;
         justify-items: center;
         text-align: center;
-        width: 100%;
+        width: 90%;
 
         >h1{
-
+            margin: 5px;
+            font-size: 1.25em;
+            color:#f8f9fa;
+            background-color: #343a40;
+            padding: 5px;
+            border-radius: 5px;
         }
     }
     >.creds{
@@ -21,7 +27,15 @@ header{
         align-items: center;
         justify-items: center;
         text-align: center;
-        width: 100%;
-        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        width: 90%;
+        grid-template-columns: repeat(auto-fit, minmax(75px, 1fr));
+        >a{
+            margin: 5px;
+            text-decoration: none;
+            color: #212529;
+            background-color:#c77dff;
+            padding: 5px;
+            border-radius: 5px;
+        }
     }
 }
