--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,6 +47,7 @@ body{
                     width: 50%;
 
                     >#sequence_display{
+                    display: none;
                     width: 50%;
                     color: #f8f9fa;
                     background-color: #343a40;
@@ -61,6 +62,8 @@ body{
                     background-color: #c77dff;
                     padding: 5px;
                     border-radius: 5px;
+                    display: none;
+
 
                     }
                 }
@@ -169,7 +172,6 @@ body{
                         background-color: #343a40;
                         padding: 5px;
                         border-radius: 5px;
-                        width: 75px;
                         cursor: pointer;
                     }
                 }
@@ -194,9 +196,11 @@ body{
 
                         >#sequence_display{
                             width: 20%;
+                            display: none;
                         }
                         >#note_display{
 
+                            display: none;
 
                         }
                     }
